@@ -1,5 +1,6 @@
 1.9.RC
 ------
+o Fixed #578 - problem with profiling queries that use LIMIT
 o Fixes #550 - problem when using START after WITH
 
 1.9.M05 (2013-03-05)
